# ci-test

./: README.md
.github/: dependabot.yml
.github/workflows/: build-matrix.yml
elixir/: .gitignore  Dockerfile  README.md  mix.exs
elixir/config/: prod.exs
elixir/lib/hello_world/: application.ex  router.ex
go/: .dockerignore  Dockerfile  Makefile  README.md  go.mod  main.go
node/: Dockerfile  README.md  package.json  server.js
python/: Dockerfile  README.md  main.py
rust/: Cargo.toml  Dockerfile  README.md
rust/src/: main.rs
